data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2138.wast
;; 9. **Test Description**: Create a `block` instruction where `br` fails to correctly unwind the operand stack before the next loop iteration.    - **Constraint**: Verifies operand stack is correctly managed, preventing unintentional infinite loops due to stack issues.

(assert_invalid
  (module (func (block (loop (br 1)) (i32.const 0) drop))
  )
  "type mismatch"
)